@@ -1,3 +1,12 @@
+Sun Apr 24 02:47:22 2005  Jaiganesh Balasubramanian  <jai@dre.vanderbilt.edu>
+
+	* DAnCE/ciao/Container_Base.cpp:
+	* DAnCE/ciao/Container_Base.h:
+	* DAnCE/ciao/Swapping_Container.cpp:
+	* DAnCE/ciao/Swapping_Container.h:
+
+          Made changes to fix compile errors.
+
 Sat Apr 23 13:54:10 2005  Jaiganesh Balasubramanian  <jai@dre.vanderbilt.edu>
 
 	* DAnCE/example/Swapping/Sender/Sender_exec_1.cpp:
